<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context="com.coursera.cpayanf.proycontacto.MainActivity">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtNombre"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:layout_marginTop="@dimen/margin"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/txtValNombre"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:paddingLeft="@dimen/padding"
			android:paddingRight="@dimen/padding"
			android:hint="@string/ttpNombre" />
	</android.support.design.widget.TextInputLayout>


	<DatePicker
		android:id="@+id/dtpFechaNacimiento"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		app:layout_constraintTop_toBottomOf="@id/txtNombre"
		app:layout_constraintStart_toStartOf="parent"
		android:calendarViewShown="false"
		android:datePickerMode="spinner" />

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtTelefono"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		app:layout_constraintTop_toBottomOf="@id/dtpFechaNacimiento"
		app:layout_constraintStart_toStartOf="parent"
		>

		<android.support.design.widget.TextInputEditText
			android:id="@+id/txtValTelefono"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:paddingLeft="@dimen/padding"
			android:paddingRight="@dimen/padding"
			android:hint="@string/ttpTelefono" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		app:layout_constraintTop_toBottomOf="@id/txtTelefono"
		app:layout_constraintStart_toStartOf="parent"
		>

		<android.support.design.widget.TextInputEditText
			android:id="@+id/txtValEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:paddingLeft="@dimen/padding"
			android:paddingRight="@dimen/padding"
			android:hint="@string/ttpEmail" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtDescripcion"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		app:layout_constraintTop_toBottomOf="@id/txtEmail"
		app:layout_constraintStart_toStartOf="parent"
		>

		<android.support.design.widget.TextInputEditText
			android:id="@+id/txtValDescripcion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:paddingLeft="@dimen/padding"
			android:paddingRight="@dimen/padding"
			android:hint="@string/ttpDescripcionContacto"
			android:minHeight="80dp"
			android:minLines="2"
			android:gravity="top|left"
			android:scrollHorizontally="false"
			android:scrollbars="vertical"
			/>
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/btnSiguiente"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Buttons"
		android:text="@string/btnSiguiente"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		tools:layout_editor_absoluteX="9dp"
		tools:layout_editor_absoluteY="496dp" />

</android.support.constraint.ConstraintLayout>
