<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/darker_gray"
	tools:context="com.coursera.cpayanf.proycontacto.ConfirmationActivity">

	<TextView
		android:id="@+id/lblConfirmar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/lblConfirmarDatos"
		android:textAlignment="center"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="@dimen/margin"
		android:layout_marginBottom="@dimen/margin"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels.Big"
		tools:layout_editor_absoluteX="83dp"
		tools:layout_editor_absoluteY="16dp" />

	<TextView
		android:id="@+id/lblValNombre"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Nombre"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lblConfirmar"
		android:layout_marginTop="@dimen/margin"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"
		tools:layout_editor_absoluteX="44dp"
		tools:layout_editor_absoluteY="46dp" />

	<TextView
		android:id="@+id/lblFecNac"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/lblFecNac"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lblValNombre"
		android:layout_marginTop="@dimen/margin"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"/>
	<TextView
		android:id="@+id/lblValFecNac"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="FechaNac"
		app:layout_constraintStart_toEndOf="@id/lblFecNac"
		app:layout_constraintTop_toTopOf="@id/lblFecNac"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"/>
	<TextView
		android:id="@+id/lblTelefono"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/lblTel"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lblFecNac"
		android:layout_marginTop="@dimen/margin"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"/>
	<TextView
		android:id="@+id/lblValTelefono"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Telefono"
		app:layout_constraintStart_toEndOf="@id/lblTelefono"
		app:layout_constraintTop_toTopOf="@id/lblTelefono"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"/>

	<TextView
		android:id="@+id/lblEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/lblEmail"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lblTelefono"
		android:layout_marginTop="@dimen/margin"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"/>
	<TextView
		android:id="@+id/lblValEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Email"
		app:layout_constraintStart_toEndOf="@id/lblEmail"
		app:layout_constraintTop_toTopOf="@id/lblEmail"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"/>
	<TextView
		android:id="@+id/lblDescripcion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/lblDescripcion"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lblEmail"
		android:layout_marginTop="@dimen/margin"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:textAppearance="@style/Labels"/>

	<TextView
		android:id="@+id/lblValDescripcion"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/margin"
		android:layout_marginRight="@dimen/margin"
		android:text="Descripcion"
		android:textAppearance="@style/Labels"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/lblDescripcion"
		app:layout_constraintTop_toTopOf="@id/lblDescripcion" />

	<Button
		android:id="@+id/btnEditar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin"
		android:paddingRight="@dimen/btnpadding"
		android:paddingLeft="@dimen/btnpadding"
		android:text="@string/btnEditar"
		style="@style/Buttons"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lblValDescripcion" />
</android.support.constraint.ConstraintLayout>
